{
    "name": "InputManager",
    "maps": [
        {
            "name": "PlayerInput",
            "id": "670597f8-fed2-4db1-87fd-f4eb57cb435d",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "2cd02b9c-c863-4a51-908b-b57d23054772",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "b598a593-0289-4649-89e2-31ce2e96b5d1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LightAttack",
                    "type": "Button",
                    "id": "35f69d13-0054-4b08-b0fe-2984a1fc0ecf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "HeavyAttack",
                    "type": "Button",
                    "id": "14b1b1f6-98c8-4fa1-a932-cbd76baf9b95",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SpecialAttack",
                    "type": "Button",
                    "id": "7d41f591-bb5f-456d-b84d-762d4834c116",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Parry",
                    "type": "Button",
                    "id": "1fd30932-9546-4fb1-9882-993de61683c4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Die",
                    "type": "Button",
                    "id": "665b299c-3aa4-48d6-9792-2b83daf40083",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b8d4efd7-89a0-48d0-9a30-59857060b6d7",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "Controller",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d2e8dc2b-24e1-4772-8029-a42dccbb4492",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1f66daf8-d15f-4224-9ace-150c74b78d5d",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "LightAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "72e628d5-49a6-4938-9a3d-b0e496053708",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Controller",
                    "action": "HeavyAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "001c0a4c-e1cc-4db0-95e7-6865b6259f34",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Controller",
                    "action": "SpecialAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3812c827-6379-4052-8600-0651bd0787ca",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Parry",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "522d76ab-f0d4-4368-b0de-3071aa2d9c8d",
                    "path": "<XInputController>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Die",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "New action map1",
            "id": "525c564c-59ed-4bf2-96cd-94dd65ac3d03",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "c4aa4a9f-eabf-46b3-9bfc-a7b2fd29bbf5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "dfe1a25f-f81c-4056-907d-83feca89f08a",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "c0ceb124-6ea6-4a97-88fe-2f847656c5d0",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "157ffca3-acf7-4f98-a0ca-085e376fdd8f",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "56db7426-93d4-4cdb-bfe0-9681de1c39fb",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "20a7093a-0075-4f2d-888b-a361f373e868",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Controller",
            "bindingGroup": "Controller",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": true,
                    "isOR": false
                }
            ]
        }
    ]
}